@@ -6,6 +6,25 @@
 
 /* A lexical scanner generated by flex */
 
+#define yy_create_buffer ext_create_buffer
+#define yy_delete_buffer ext_delete_buffer
+#define yy_flex_debug ext_flex_debug
+#define yy_init_buffer ext_init_buffer
+#define yy_flush_buffer ext_flush_buffer
+#define yy_load_buffer_state ext_load_buffer_state
+#define yy_switch_to_buffer ext_switch_to_buffer
+#define yyin extin
+#define yyleng extleng
+#define yylex extlex
+#define yylineno extlineno
+#define yyout extout
+#define yyrestart extrestart
+#define yytext exttext
+#define yywrap extwrap
+#define yyalloc extalloc
+#define yyrealloc extrealloc
+#define yyfree extfree
+
 #define FLEX_SCANNER
 #define YY_FLEX_MAJOR_VERSION 2
 #define YY_FLEX_MINOR_VERSION 5
@@ -336,7 +355,7 @@ void extfree (void *  );
 
 /* Begin user sect3 */
 
-#define extwrap() 1
+#define extwrap(n) 1
 #define YY_SKIP_YYWRAP
 
 typedef char YY_CHAR;
@@ -535,7 +554,7 @@ char *exttext;
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: external_l.c,v 1.10 2008/01/13 08:07:53 c_anthon Exp $
+ * $Id: external_l.c,v 1.11 2008/03/16 20:59:37 c_anthon Exp $
  */
 
 #include "config.h"
@@ -547,7 +566,7 @@ extern int extparse(void);
 
 int prc_lineno = 1;
 void escapes(const char *cp, char *tp);
-#line 551 "external_l.c"
+#line 570 "external_l.c"
 
 #define INITIAL 0
 
@@ -564,6 +583,35 @@ void escapes(const char *cp, char *tp);
 #endif
 
 static int yy_init_globals (void );
+
+/* Accessor methods to globals.
+   These are made visible to non-reentrant scanners for convenience. */
+
+int extlex_destroy (void );
+
+int extget_debug (void );
+
+void extset_debug (int debug_flag  );
+
+YY_EXTRA_TYPE extget_extra (void );
+
+void extset_extra (YY_EXTRA_TYPE user_defined  );
+
+FILE *extget_in (void );
+
+void extset_in  (FILE * in_str  );
+
+FILE *extget_out (void );
+
+void extset_out  (FILE * out_str  );
+
+int extget_leng (void );
+
+char *extget_text (void );
+
+int extget_lineno (void );
+
+void extset_lineno (int line_number  );
 
 /* Macros after this point can all be overridden by user definitions in
  * section 1.
@@ -701,7 +749,7 @@ YY_DECL
 #line 44 "external_l.l"
 
 
-#line 705 "external_l.c"
+#line 753 "external_l.c"
 
 	if ( !(yy_init) )
 		{
@@ -903,7 +951,7 @@ YY_RULE_SETUP
 #line 90 "external_l.l"
 ECHO;
 	YY_BREAK
-#line 907 "external_l.c"
+#line 955 "external_l.c"
 case YY_STATE_EOF(INITIAL):
 	yyterminate();
 
@@ -1134,7 +1182,7 @@ static int yy_get_next_buffer (void)
 
 		/* Read in more data. */
 		YY_INPUT( (&YY_CURRENT_BUFFER_LVALUE->yy_ch_buf[number_to_move]),
-			(yy_n_chars), (size_t) num_to_read );
+			(yy_n_chars), num_to_read );
 
 		YY_CURRENT_BUFFER_LVALUE->yy_n_chars = (yy_n_chars);
 		}
@@ -1598,7 +1646,7 @@ YY_BUFFER_STATE ext_scan_buffer  (char * base, yy_size_t  size )
 
 /** Setup the input buffer state to scan a string. The next call to extlex() will
  * scan from a @e copy of @a str.
- * @param yystr a NUL-terminated string to scan
+ * @param str a NUL-terminated string to scan
  * 
  * @return the newly allocated buffer state object.
  * @note If you want to scan bytes that may contain NUL values, then use
